# android-kivy

./: .gitignore  .pre-commit-config.yaml  README.md  buildozer.spec  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: buildozer.yml  pytest.yml
android/: geckoview.py  test.java
libs/components/: appbar.py
libs/components/shared/: appbar.py
libs/screens/: home_page.py  home_screen.py
src/: main.py
src/libs/components/: app_bar.py  appbar.py
src/libs/screens/: home_page.py  home_screen.py
tests/: test_screen_size.py
