[tool.poetry]
name = "android"
version = "0.1.0"
description = "A modern android app for CoreProject"
authors = ["baseplate-admin","tokitou-san"]
license = "AGPL-v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
kivy = "^2.2.1"
kivymd = "^1.1.1"
cython = "3.0.0"
buildozer = { version="^1.5.0", platform='linux' }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
