[tool.poetry]
name = "android"
version = "0.1.0"
description = "A modern android app for CoreProject"
authors = ["baseplate-admin <baseplate-admin@coreproject.moe>","tokitou-san <tokito@coreproject.moe>"]
license = "AGPL-v3"
readme = "README.md"

[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.org/simple/"

[tool.poetry.dependencies]
python = "^3.8"
kivy = ">=2.2.1"
kivymd = ">=1.1.1"
cython = ">=3.0.8"
buildozer = { version="^1.5.0", platform='linux' }

[tool.poetry.group.dev.dependencies]
watchdog = "^4.0.0"
poethepoet = "^0.24.4"
ruff = "^0.4.1"
pytest = "^8.0.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.ruff]
line-length = 92

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    # https://github.com/charliermarsh/ruff/issues/61#issuecomment-1233497658
    '**/migrations'
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11
target-version = "py311"

[tool.poe.tasks]
dev = 'python ./main.py'
test = 'pytest .'

[tool.pytest.ini_options]
pythonpath = [
  "."
]
